--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@supabase/supabase-js": "^2.45.4",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.5",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "next": "14.2.12",
