--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,7 @@
   "rules": {
     "prettier/prettier": "error",
     "@typescript-eslint/no-explicit-any": "warn",
+    "@typescript-eslint/no-unused-vars": "warn",
     "react/react-in-jsx-scope": "off"
   }
 }
